command improvements and bug fixes